# vim-markdown-composer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
after/ftplugin/markdown/: composer.vim
after/ftplugin/rst/: composer.vim
after/ftplugin/tex/: composer.vim
config/: log.yaml
doc/: markdown-composer.txt
rplugin/python3/markdown_composer/: __init__.py
src/: lib.rs  main.rs  msgpack.rs
tests/: smoke.rs
