[package]
name = "markdown-composer"
version = "0.2.3"
authors = ["Andy Russell <arussell123@gmail.com>"]
description = "A complete solution for previewing markdown."
edition = "2018"

[dependencies]
aurelius = "0.7.2"
clap = "2.33.0"
log = "0.4.6"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
log4rs = "0.9.0"
serde = { version = "1.0.90", features = ["derive"] }
shlex = "0.1.1"

serde_json = { version = "1.0.39", optional = true }
rmp-serde = { version = "0.14.0", optional = true }

[features]
default = ["msgpack"]
msgpack = ["rmp-serde"]
json-rpc = ["serde_json"]

[dev-dependencies]
assert_cmd = "0.12.0"
