[package]
name = "markdown-composer"
version = "0.2.3"
authors = ["Andy Russell <arussell123@gmail.com>"]
description = "A complete solution for previewing markdown."
edition = "2018"

[dependencies]
anyhow = "1.0.56"
aurelius = "0.7.2"
bytes = "1.1.0"
cfg-if = "1.0.0"
clap = "2.33.0"
futures-util = "0.3.21"
log = "0.4.6"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
log4rs = "0.9.0"
rmp-serde = "1.0.0"
serde = { version = "1.0.90", features = ["derive"] }
shlex = "0.1.1"
tokio = { version = "1.17.0", features = ["io-std", "macros", "rt"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tokio-serde = { version = "0.8.0" }

[features]
default = ["msgpack"]
msgpack = ["tokio-serde/messagepack"]
json-rpc = ["tokio-serde/json"]

[dev-dependencies]
assert_cmd = "0.12.0"

[patch.crates-io]
aurelius = { path = "../aurelius" }
