[package]
name = "markdown-composer"
version = "0.2.3"
authors = ["Andy Russell <arussell123@gmail.com>"]
description = "A complete solution for previewing markdown."
edition = "2018"

[dependencies]
anyhow = "1.0"
aurelius = "0.7"
clap = { version = "4.5", features = ["cargo"] }
log = "0.4"
log-panics = { version = "2.1", features = ["with-backtrace"] }
log4rs = "1.3"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"

serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }

[features]
default = ["msgpack"]
msgpack = ["rmp-serde"]
json-rpc = ["serde_json"]

[dev-dependencies]
assert_cmd = "2.0"
